# StringIter

./: Cargo.toml  README.md
benches/: benchmarks.rs
src/: interval.rs  iter_fns.rs  iterators.rs  lib.rs  merge.rs  pattern.rs  slice.rs  split.rs  string_ext.rs
tests/: iter.rs  split.rs
